--- a/templates/signup-merchant.html
+++ b/templates/signup-merchant.html
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item mx-2">
-              <a class="nav-link active fw-bold" aria-current="page" href="{{ url_for('home')}}">Home</a>
+              <a class="nav-link active fw-bold" aria-current="page" href="{{ url_for('Home')}}">Home</a>
             </li>
             <li class="nav-item mx-2">
               <a class="nav-link fw-bold" href="#" style="color: black">Services</a>
