--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -145,7 +145,7 @@
           <form action="#" method="post">
             <input type="text" placeholder="Email" required />
             <input type="password" placeholder="Password" required />
-            <button type="submit" style="background: white"><a href="{{url_for('customer')}}">Login</a></button>
+            <button type="submit" style="background: white"><a href="/static/Vendor/index/index.html">Login</a></button>
           </form>
           <p>Don't have an account? <a href="{{url_for('signupCustomer')}}">Sign Up</a></p>
         </div>
