added email functionality for contactus

--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -118,11 +118,14 @@
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
           <form
+          method="post"
             class="p-4 p-md-5 border rounded-3 bg-body-tertiary"
             data-bitwarden-watching="1"
+            
           >
             <div class="form-floating mb-3">
               <input
+              name="email_input"
                 type="email"
                 class="form-control"
                 id="floatingInput"
